@@ -73,6 +73,9 @@
       </tr>
     </table>
 
+    <img src="images/circle.png" class="image" alt="image 1">
+    <img src="images/circle.png" class="image" alt="image 2">
+    <img src="images/circle.png" class="image" alt="image 3">
 
   </body>
 </html>
